Add ptrace argument parsing and test program

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -g -pthread
 
-PROGS = dummy_prog multi_thread_prog fork_prog
+PROGS = dummy_prog multi_thread_prog fork_prog ptrace_prog
 
 all: $(PROGS)
 
@@ -14,5 +14,8 @@ multi_thread_prog: multi_thread_prog.c
 fork_prog: fork_prog.c
 	$(CC) $(CFLAGS) -o fork_prog fork_prog.c
 
+ptrace_prog: ptrace_prog.c
+	$(CC) $(CFLAGS) -o ptrace_prog ptrace_prog.c
+
 clean:
-	rm -f $(PROGS)
+	rm -f $(PROGS) ptrace_prog
